--- a/msm8916-common/proprietary/etc/gps.conf
+++ b/msm8916-common/proprietary/etc/gps.conf
@@ -1,9 +1,16 @@
-#gps_conf_from_sim.conf
+#URLs from which to download XTRA data
+XTRA_SERVER_1=https://xtrapath1.izatcloud.net/xtra3grc.bin
+XTRA_SERVER_2=https://xtrapath2.izatcloud.net/xtra3grc.bin
+XTRA_SERVER_3=https://xtrapath3.izatcloud.net/xtra3grc.bin
 
-#XTRA_SERVER_1=http://xtrapath2.izatcloud.net/xtra2.bin
-#XTRA_SERVER_2=http://xtrapath2.izatcloud.net/xtra2.bin
-#XTRA_SERVER_3=http://xtrapath3.izatcloud.net/xtra2.bin
+#Version check for XTRA
+#DISABLE = 0
+#AUTO    = 1
+#XTRA2   = 2
+#XTRA3   = 3
+XTRA_VERSION_CHECK=1
 
+# Error Estimate
 # _SET = 1
 # _CLEAR = 0
 ERR_ESTIMATE=0
@@ -23,16 +30,32 @@ ERR_ESTIMATE=0
 DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
-#INTERMEDIATE_POS=0
+INTERMEDIATE_POS=0
+
+# Below bit mask configures how GPS functionalities
+# should be locked when user turns off GPS on Settings
+# Set bit 0x1 if MO GPS functionalities are to be locked
+# Set bit 0x2 if NI GPS functionalities are to be locked
+# default - non is locked for backward compatibility
+#GPS_LOCK = 0
 
 # supl version 1.0
-#5UPL_VER=0x20000
+SUPL_VER=0x10000
 
 # Emergency SUPL, 1=enable, 0=disable
-#SUPL_ES=0
+SUPL_ES=0
 
-# SUPL Mode (0=Standalone, 1=MSB, 2=MSA)
-#SUPL_MODE=1
+#Choose PDN for Emergency SUPL
+#1 - Use emergency PDN
+#0 - Use regular SUPL PDN for Emergency SUPL
+USE_EMERGENCY_PDN_FOR_EMERGENCY_SUPL=1
+
+#SUPL_MODE is a bit mask set in config.xml per carrier by default.
+#If it is uncommented here, this value will overwrite the value from
+#config.xml.
+#MSA=0X2
+#MSB=0X1
+#SUPL_MODE=
 
 # GPS Capabilities bit mask
 # SCHEDULING = 0x01
@@ -59,6 +82,14 @@ CAPABILITIES=0x37
 # C2K_HOST=c2k.pde.com or IP
 # C2K_PORT=1234
 
+# Bitmask of slots that are available
+# for write/install to, where 1s indicate writable,
+# and the default value is 0 where no slots
+# are writable. For example, AGPS_CERT_WRITABLE_MASK
+# of b1000001010 makes 3 slots available
+# and the remaining 7 slots unwritable.
+#AGPS_CERT_WRITABLE_MASK=0
+
 ####################################
 #  LTE Positioning Profile Settings
 ####################################
@@ -66,15 +97,15 @@ CAPABILITIES=0x37
 # 1: Enable LPP_User_Plane on LTE
 # 2: Enable LPP_Control_Plane
 # 3: Enable both LPP_User_Plane and LPP_Control_Plane
-#LPP_PROFILE = 0
+LPP_PROFILE = 2
 
 ################################
 # EXTRA SETTINGS
 ################################
 # NMEA provider (1=Modem Processor, 0=Application Processor)
-#NMEA_PROVIDER=0
+NMEA_PROVIDER=0
 # Mark if it is a SGLTE target (1=SGLTE, 0=nonSGLTE)
-#SGLTE_TARGET=0
+SGLTE_TARGET=0
 
 ##################################################
 # Select Positioning Protocol on A-GLONASS system
@@ -82,4 +113,18 @@ CAPABILITIES=0x37
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-#A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0
+
+##################################################
+# Select technology for LPPe Control Plane
+##################################################
+# 0x1: DBH for LPPe CP
+# 0x2: WLAN AP Measurements for LPPe CP
+LPPE_CP_TECHNOLOGY = 0
+
+##################################################
+# Select technology for LPPe User Plane
+##################################################
+# 0x1: DBH for LPPe UP
+# 0x2: WLAN AP Measurements for LPPe UP
+LPPE_UP_TECHNOLOGY = 0
